# power4

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  Makefile  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
examples/: minimal.lua  shed.lua  shed_test.lua
main/: CMakeLists.txt  Kconfig.projbuild  battery_bank.cpp  battery_bank.hpp  battery_scanner.cpp  battery_scanner.hpp  battery_store.cpp  battery_store.hpp  ble_manager.cpp  ble_manager.hpp  checksum.cpp  checksum.hpp  config_flags.cpp  config_flags.hpp  config_gatt.cpp  config_gatt.hpp  console.cpp  console.hpp  idf_component.yml  json_output.cpp  json_output.hpp  log_buffer.cpp  log_buffer.hpp  main.cpp  policy_storage.cpp  policy_storage.hpp  policy_task.cpp  policy_task.hpp  relay_gatt.cpp  relay_gatt.hpp  relay_manager.cpp  relay_manager.hpp  utils.cpp  utils.hpp
power4ctl/: Makefile  power4ctl.1  power4ctl.c  power4ctl.default  power4ctl.service  sha1.c  sha1.h
power4ctl/debian/: conffiles  control.in  postinst  prerm
